# UnreadBooksGlow

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: Manager.cpp  Manager.h  PCH.h  main.cpp
